eks/uat/workload.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: astd
  name: web-dm
  labels:
    name: web
    owner: fhk
    component: react
    env: uat
    version: v1
spec:
  replicas: 2 
  selector:
    matchLabels:
      name: web
      component: react
  template:
    metadata:
      labels:
        name: web
        owner: fhk
        component: react
        env: uat
        version: v1
    spec:
      nodeSelector:
        intent: apps
      containers:
        - name: web-api
          image: 307426213411.dkr.ecr.ap-east-1.amazonaws.com/astd/react:1-0-0beta-194
          ports:
            - name: http
              containerPort: 3000
          volumeMounts:
            - name: public-config-js
              mountPath: /opt/app-root/src/public/config.js
              subPath: config.js
          resources:
            requests:
              cpu: 256m 
              memory: 1024Mi
      volumes:
        - name: public-config-js
          configMap:
            name: web-cm-public-config-js
      topologySpreadConstraints:
        - labelSelector:
            matchLabels:
              name: web 
              component: react
          maxSkew: 1
          topologyKey: topology.kubernetes.io/zone
          whenUnsatisfiable: DoNotSchedule
          matchLabelKeys:
            - pod-template-hash
          minDomains: 2
