eks/uat/web_service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: astd 
  name: web-svc
  labels:
    name: web 
    owner: fhk
    component: react
    env: uat
    version: v1
spec:
  ports:
    - name: http
      port: 3000
      targetPort: 3000
  type: NodePort
  selector:
    name: web
    component: react
